# CloneDetector

./: .gitignore  CMakeLists.txt  Components.cpp  Components.h  Node.cpp  Node.h  XMLParser.cpp  XMLParser.h  main.cpp  time.sh
dependencies/tinyXML/: CMakeLists.txt
main/: Components.cpp  Components.h  Node.cpp  Node.h  Utility.cpp  Utility.h  XMLParser.cpp  XMLParser.h  main.cpp
src/: main.cpp
src/main/: Circuit.cpp  Circuit.h  Clone.cpp  Clone.h  Components.cpp  Components.h  Functions.cpp  Functions.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Utility.cpp  Utility.h  XMLParser.cpp  XMLParser.h
src/testing/: test.cpp
src/testing/circuits/: ALU_Group03.circ  FullDataPath.circ  Oefening 4.circ  Sessie4Oefening2.circ  canonical.circ  easyClones.circ  medium_gates.circ  modified register.circ  narrow_gates.circ  overlappingClones.circ  subCircuitPorts.circ
test/: 7-segment-display-driver.circ  ALU_Group03.circ  Oefening 4.circ  test.circ
test_data/: Group03.circ  Group04.circ  Group05.circ  Group06.circ  Group07.circ  Group08.circ  Group09.circ  Group10.circ  Group11.circ  Group12.circ  Group13.circ  Group14.circ  Group15.circ  Group16.circ  Group17.circ  Group18.circ  test1.circ  test2.circ
test_data/experiment 1/: results
test_data/experiment 2/: Group01.circ  Group02.circ  result  results  test2.circ
test_data/experiment 3/: results  temp
test_data/experiment 4/: result  results  test.circ
test_data/experiment 5/: test.circ
test_data/experiment 6/: results  test.circ
test_data/experiment 7/: Group01.circ  Group02.circ  results
testing/: test.cpp
testing/circuits/: Sessie4Oefening2.circ  canonical.circ  complicatedConnection.circ  directConnection.circ  large_gates.circ  modified register.circ  simpleConnection.circ
